fix bugs on mobile version

--- a/style.css
+++ b/style.css
@@ -430,11 +430,11 @@ li {
     }
 
     .popular-tours__tour-image {
-        width: clamp(280px, 75vw, 520px);
+        width: clamp(280px, 86vw, 520px);
     }
 
     .popular-tours__tour-text {
-        width: clamp(280px, 75vw, 520px);
+        width: clamp(280px, 86vw, 520px);
     }
 
     .popular-tours__tour-name {
@@ -521,7 +521,7 @@ li {
     border-radius: 50%;
     width: 95px;
     height: 95px;
-    margin-right: clamp(25px, 4vw, 45px);
+    margin-right: clamp(22px, 3.3vw, 45px);
 }
 
 .reviews__name {
@@ -548,7 +548,7 @@ li {
     .reviews-section__reviews {
         margin-right: 20px;
         flex: 0 0 auto;
-        width: 387px;
+        width: 370px;
     }
 
     .reviews-section__reviews:last-child {
